<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddingMovieActivity">

    <!--Name of movie-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvName"/>
    <EditText
            android:id="@+id/etName"
            android:hint="@string/et_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    <!--Description of movies-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDescription"/>
    <EditText
            android:id="@+id/etDescription"
            android:hint="@string/et_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>

    <!--language of movie-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLangauge"/>

    <!--Radio button group for language-->
    <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtngbLangauge">
        <RadioButton
                android:id="@+id/rbtnEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnEnglish_Text"/>
        <RadioButton
                android:id="@+id/rbtnChinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnChinese_Text"/>
        <RadioButton
                android:id="@+id/rbtnMalay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnMalay_Text"/>
        <RadioButton
                android:id="@+id/rbtnTamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbtnTamil_Text"/>
    </RadioGroup>


    <!--Release date of movie-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvReleaseDate"/>
    <EditText
            android:id="@+id/etReleaseDate"
            android:hint="@string/et_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>


    <!--Check box for suitability-->
    <CheckBox
            android:id="@+id/chkbxNotsuitable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chckNotsuitable_Text"
            android:onClick="onChkbxNotClick"/>


    <LinearLayout
            android:id="@+id/LLNotsuitable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/chkbxViolence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/chckViolence_Text"/>
        <CheckBox
                android:id="@+id/chkbxLangauge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/chckLangauge_Text"/>
    </LinearLayout>
</LinearLayout>