<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".OverviewActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="142dp"
            app:srcCompat="@drawable/movie_logo"
            android:id="@+id/imageView3"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTitle"/>

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test"
            android:textSize="24sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDescription"/>
    <TextView
            android:id="@+id/tvOverviewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test"
            android:textSize="24sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvOverviewReview"/>
    <TextView
            android:id="@+id/tvReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvOverviewReviewText"
            android:textSize="24sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLangauge"/>
    <TextView
            android:id="@+id/tvLangauge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test"
            android:textSize="24sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvReleaseDate"/>
    <TextView
            android:id="@+id/tvOverviewReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test"
            android:textSize="24sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvUnder13"/>
    <TextView
            android:id="@+id/tvUnder13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test"
            android:textSize="24sp"/>

</LinearLayout>